# click-odoo

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  CHANGES.md  CHANGES.rst  README.md  README.rst  pytest.ini  setup.py  tox.ini
.github/: FUNDING.yaml  PULL_REQUEST_TEMPLATE.md  config.yml  release-drafter.yml  settings.yml
.github/ISSUE_TEMPLATE/: ---bug-report.md  ---documentation.md  ---everything-else.md  ---feature-request.md
.github/workflows/: ci-dodoo.yaml  pre-commit.yaml
click_odoo/: cli.py  options.py
dodoo/: README.md  __init__.py  cli.py  commands.py  config.py  connection.py  connections.py  git.py  metrics.py  modules.py  odoo_patcher.py  options.py  pyproject.toml
dodoo-backup/: README.md  pyproject.toml
dodoo-backup/dodoo_backup/: __init__.py  cli.py  file_type_identifier.py
dodoo-backup/tests/: conftest.py  test_cli.py  test_dodoo_backup.py
dodoo-copy/: README.md  pyproject.toml
dodoo-copy/dodoo_copy/: __init__.py  cli.py
dodoo-copy/tests/: conftest.py  test_cli.py  test_dodoo_copy.py
dodoo-init/: README.md  __init__.py  cache.py  pyproject.toml
dodoo-init/dodoo_init/: __init__.py  cache.py  cli.py
dodoo-init/dodoo_init/interfaces/: odoo.py
dodoo-init/dodoo_init/patchers/: odoo.py
dodoo-init/tests/: test_cache.py  test_cli.py  test_dodoo_init.py
dodoo-init/tests/interfaces/: test_odoo.py
dodoo-init/tests/patchers/: test_odoo.py
dodoo-load/: README.md
dodoo-migrate/: README.md
dodoo-profile/: README.md
dodoo-run/: README.md  __init__.py  bus.py  cli.py  graphql.py  http.py  pyproject.toml
dodoo-run/dodoo_run/: __init__.py  cli.py
dodoo-run/dodoo_run/interfaces/: odoo.py
dodoo-run/dodoo_run/middleware/: globalscope.py
dodoo-run/dodoo_run/middleware/odoo/: auth_backend_async.py  environment_async.py
dodoo-run/dodoo_run/patchers/: odoo.py
dodoo-run/dodoo_run/patches/: odoo.py
dodoo-run/dodoo_run/servers/: __init__.py  _common.py  bus.py  graphql.py  http.py  matrix.py
dodoo-run/dodoo_run/servers/watcher/: __init__.py
dodoo-run/dodoo_run/sessions/: __init__.py
dodoo-run/dodoo_run/workers/: __init__.py
dodoo-run/middleware/odoo/: __init__.py
dodoo-run/tests/: conftest.py  test_cli.py  test_dodoo_run.py
dodoo-shell/: README.md  pyproject.toml
dodoo-shell/dodoo_shell/: __init__.py  cli.py  console.py
dodoo-shell/tests/: test_cli.py  test_cli.spy  test_dodoo_shell.py
dodoo-shell/tests/data/scripts/: with_args.py  with_commit.py  with_commit_raise.py  with_database.py  with_raise.py  with_rollback.py  without_database.py
dodoo-test/: README.md
dodoo-translate/: README.md
dodoo/dodoo/: __init__.py  cli.py  config.py  connections.py  git.py  logger.py
dodoo/dodoo/configs/: __init__.py  _errors.py  db.py  odoo.py  smtp.py
dodoo/dodoo/interfaces/: odoo.py
dodoo/dodoo/patchers/: __init__.py  odoo.py
dodoo/dodoo/utils/: __init__.py  db.py  odoo.py
dodoo/interfaces/: odoo.py
dodoo/patchers/: odoo.py
dodoo/tests/: conftest.py  test_cli.py
dodoo/tests/configs/: test_config.py
dodoo/tests/interfaces/: test_odoo.py
dodoo/tests/patchers/: conftest.py  test_base_patcher.py  test_odoo.py
dodoo/tests/utils/: conftest.py  test_utils.py
tests/: test_dodoo.py
tests/scripts/: install_odoo.py  script1.py  script2.py
