[tool.poetry]
name = "dodoo"
version = "0.1.0"
description = "A suck-less Odoo server middleware; batteries included."
authors = [
	"David Arnold <dar@xoe.solutions>"
]
license = "LGPL-3.0+"
readme = 'README.md'
repository = "https://github.com/xoe-labs/dodoo"
homepage = "https://github.com/xoe-labs/dodoo/blob/master/dodoo/README.md"

classifiers = [
	"Topic :: Software Development :: User Interfaces",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Framework :: Odoo",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
# dodoo-run = { version = "^0.1.0", optional = true }
# dodoo-init = { version = "^0.1.0", optional = true }
# dodoo-backup = { version = "^0.1.0", optional = true }
# dodoo-copy = { version = "^0.1.0", optional = true }
# dodoo-shell = { version = "^0.1.0", optional = true }
# dodoo-load = { version = "^0.1.0", optional = true }
# dodoo-migrate = { version = "^0.1.0", optional = true }
# dodoo-test = { version = "^0.1.0", optional = true }
python = "^3.7"
pygit2 = "^1.0.0"
click-plugins = "1.1.1"
click = "7.0"
click-pathlib = "^2019.6"
colorlog = "^4.0"
mashumaro = "^1.9"
psycopg2-binary = "^2.8"

[tool.poetry.extras]
server = ["dodoo-run", "dodoo-init", "dodoo-backup", "dodoo-copy"]
ops = ["dodoo-shell", "dodoo-load", "dodoo-migrate", "dodoo-test"]

[tool.poetry.dev-dependencies]
# TODO: clone odoo with cache https://github.com/sdispater/poetry/issues/1698
pytest-mock = "^1.13"
pre-commit = "^1.20"
pytest = "^5.3"
click-man = "^0.3.0"
pytest-cov = "^2.8"
pdbpp = "^0.10.2"
pytest-datadir = "^1.3"
autopub = "^0.1.3"
githubrelease = "^1.5"
odoo = {path = "../.odoo"}

[tool.poetry.scripts]
dodoo = 'dodoo.cli:main'

# [tool.poetry.plugins."dodoo.cli_plugins"]
# test = dodoo-test.cli:test
# pytest = dodoo-test.cli:pytest

[tool.autopub]
git-username = "blaggacao"
git-email = "dar@xoe.solutions"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
